--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
-                <div class="d-flex">
+                <div class="d-flex btn-group-responsive">
                     <a href="login.html" class="btn btn-outline-primary me-2">Login</a>
                     <a href="register.html" class="btn btn-primary">Sign Up</a>
                 </div>
@@ -57,11 +57,11 @@
                     <p class="lead text-muted mb-4">
                         Connect with top employers and discover opportunities that match your skills and aspirations.
                     </p>
-                    <div class="d-flex flex-wrap gap-3">
-                        <a href="jobs.html" class="btn btn-primary btn-lg">
+                    <div class="d-flex flex-wrap gap-3 btn-stack">
+                        <a href="jobs.html" class="btn btn-primary btn-lg btn-responsive">
                             <i class="fas fa-search me-2"></i>Browse Jobs
                         </a>
-                        <a href="register.html" class="btn btn-outline-primary btn-lg">
+                        <a href="register.html" class="btn btn-outline-primary btn-lg btn-responsive">
                             <i class="fas fa-user-plus me-2"></i>Get Started
                         </a>
                     </div>
@@ -110,7 +110,7 @@
                             </div>
                             <div class="col-md-2">
                                 <label class="form-label fw-semibold">&nbsp;</label>
-                                <button type="submit" class="btn btn-primary w-100">
+                                <button type="submit" class="btn btn-primary w-100 btn-responsive">
                                     <i class="fas fa-search me-1"></i>Search
                                 </button>
                             </div>
@@ -130,7 +130,7 @@
                     <p class="text-muted">Discover the latest opportunities from top companies</p>
                 </div>
                 <div class="col-lg-4 text-end">
-                    <a href="jobs.html" class="btn btn-outline-primary">View All Jobs</a>
+                    <a href="jobs.html" class="btn btn-outline-primary btn-responsive">View All Jobs</a>
                 </div>
             </div>
             <div class="row" id="featured-jobs">
@@ -400,7 +400,7 @@
                     <div class="col-lg-6">
                         <form class="newsletter-form d-flex gap-2">
                             <input type="email" class="form-control" placeholder="Enter your email address" required>
-                            <button type="submit" class="btn btn-light btn-sm px-4">
+                            <button type="submit" class="btn btn-light btn-sm px-4 btn-responsive">
                                 <i class="fas fa-paper-plane me-1"></i>Subscribe
                             </button>
                         </form>
