--- a/login.html
+++ b/login.html
@@ -80,12 +80,12 @@
 
                         <div class="row g-2">
                             <div class="col-6">
-                                <button class="btn btn-outline-secondary w-100">
+                                <button class="btn btn-outline-secondary w-100 btn-social">
                                     <i class="fab fa-google me-2"></i>Google
                                 </button>
                             </div>
                             <div class="col-6">
-                                <button class="btn btn-outline-secondary w-100">
+                                <button class="btn btn-outline-secondary w-100 btn-social">
                                     <i class="fab fa-linkedin me-2"></i>LinkedIn
                                 </button>
                             </div>
@@ -112,27 +112,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        function togglePassword() {
-            const passwordField = document.getElementById('password');
-            const toggleIcon = document.getElementById('toggleIcon');
-            
-            if (passwordField.type === 'password') {
-                passwordField.type = 'text';
-                toggleIcon.classList.remove('fa-eye');
-                toggleIcon.classList.add('fa-eye-slash');
-            } else {
-                passwordField.type = 'password';
-                toggleIcon.classList.remove('fa-eye-slash');
-                toggleIcon.classList.add('fa-eye');
-            }
-        }
-
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            // Add login logic here
-            alert('Login functionality would be implemented here!');
-        });
-    </script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
