--- a/register.html
+++ b/register.html
@@ -190,12 +190,12 @@
 
                         <div class="row g-2">
                             <div class="col-6">
-                                <button class="btn btn-outline-secondary w-100">
+                                <button class="btn btn-outline-secondary w-100 btn-social">
                                     <i class="fab fa-google me-2"></i>Google
                                 </button>
                             </div>
                             <div class="col-6">
-                                <button class="btn btn-outline-secondary w-100">
+                                <button class="btn btn-outline-secondary w-100 btn-social">
                                     <i class="fab fa-linkedin me-2"></i>LinkedIn
                                 </button>
                             </div>
@@ -222,22 +222,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/auth.js"></script>
     <script>
-        function togglePassword() {
-            const passwordField = document.getElementById('password');
-            const toggleIcon = document.getElementById('toggleIcon');
-            
-            if (passwordField.type === 'password') {
-                passwordField.type = 'text';
-                toggleIcon.classList.remove('fa-eye');
-                toggleIcon.classList.add('fa-eye-slash');
-            } else {
-                passwordField.type = 'password';
-                toggleIcon.classList.remove('fa-eye-slash');
-                toggleIcon.classList.add('fa-eye');
-            }
-        }
-
         // Toggle between job seeker and employer fields
         document.querySelectorAll('input[name="accountType"]').forEach(radio => {
             radio.addEventListener('change', function() {
@@ -252,12 +238,6 @@
                     employerFields.style.display = 'block';
                 }
             });
-        });
-
-        document.getElementById('registerForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            // Add registration logic here
-            alert('Registration functionality would be implemented here!');
         });
     </script>
 </body>
