Implement two-column parallel job layout
- Set grid view as default for jobs page
- Updated view toggle buttons to default to grid view
- Added responsive CSS for two-column job layout
- Jobs now display side by side on desktop and tablet
- Single column layout on mobile for better readability
- Enhanced job card styling for parallel display
- Improved responsive behavior across all screen sizes

--- a/jobs.html
+++ b/jobs.html
@@ -274,10 +274,10 @@
                         <div class="d-flex align-items-center">
                             <span class="text-muted me-3">View:</span>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-outline-primary active" id="listView">
+                                <button type="button" class="btn btn-outline-primary" id="listView">
                                     <i class="fas fa-list"></i>
                                 </button>
-                                <button type="button" class="btn btn-outline-primary" id="gridView">
+                                <button type="button" class="btn btn-outline-primary active" id="gridView">
                                     <i class="fas fa-th"></i>
                                 </button>
                             </div>
